--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,10 @@ name = "tt"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+chrono = "0.4.37"
+confy = "0.6.1"
+reqwest = { version = "0.12.3", features = ["json"] }
+tokio = { version = "1", features = ["full"] }
+rusqlite = { version = "0.31.0", features = ["bundled"] }
+
