--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,9 @@ edition = "2021"
 
 [dependencies]
 chrono = "0.4.37"
+serde = "1.0.197"
+serde_derive = "1.0.197"
 confy = "0.6.1"
 reqwest = { version = "0.12.3", features = ["json"] }
 tokio = { version = "1", features = ["full"] }
 rusqlite = { version = "0.31.0", features = ["bundled"] }
-
