--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,5 @@ confy = "0.6.1"
 reqwest = { version = "0.12.3", features = ["json"] }
 tokio = { version = "1", features = ["full"] }
 rusqlite = { version = "0.31.0", features = ["bundled"] }
+percent-encoding = "2.3.1"
+serde_json = "1.0.115"
