--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ tokio = { version = "1", features = ["full"] }
 rusqlite = { version = "0.31.0", features = ["bundled"] }
 percent-encoding = "2.3.1"
 serde_json = "1.0.115"
+directories = "5.0.1"
