--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ rusqlite = { version = "0.31.0", features = ["bundled"] }
 percent-encoding = "2.3.1"
 serde_json = "1.0.115"
 directories = "5.0.1"
+rand = "0.8.5"
