--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -5,6 +5,7 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+  workflow_dispatch:
 
 env:
   CARGO_TERM_COLOR: always
@@ -16,7 +17,15 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - name: Add toolchain for windows
+      run: rustup target add x86_64-pc-windows-gnu
+    - uses: Swatinem/rust-cache@v2
     - name: Build
       run: cargo build --verbose
-    - name: Run tests
-      run: cargo test --verbose
+    - name: Build for windows
+      run: cargo build --target x86_64-pc-windows-gnu --release
+    - name: Upload artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: nighty-${{ github.sha }}
+        path: ./target/release/tt.exe
