--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -12,20 +12,40 @@ env:
 
 jobs:
   build:
+    strategy:
+      matrix:
+        target:
+        - x86_64-unknown-linux-gnu
+        - x86_64-unknown-linux-musl
+        - x86_64-apple-darwin
+        - x86_64-pc-windows-msvc
+        include:
+        - target: x86_64-unknown-linux-gnu
+          os: ubuntu-latest
+        - target: x86_64-unknown-linux-musl
+          os: ubuntu-latest
+        - target: x86_64-pc-windows-msvc
+          os: windows-latest
 
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
 
     steps:
     - uses: actions/checkout@v3
-    - name: Add toolchain for windows
-      run: rustup target add x86_64-pc-windows-gnu
+    - name: Setup Rust toolchain
+      run: |
+        rustup target add ${{ matrix.target }}
     - uses: Swatinem/rust-cache@v2
     - name: Build
-      run: cargo build --verbose
-    - name: Build for windows
-      run: cargo build --target x86_64-pc-windows-gnu --release
-    - name: Upload artifacts
+      run: cargo build --verbose --release
+    - name: Upload artifacts(Windows)
       uses: actions/upload-artifact@v4
+      if: matrix.os == 'windows-latest'
       with:
-        name: nighty-${{ github.sha }}
+        name: nighty-${{ github.sha }}-${{ matrix.target }}
         path: ./target/release/tt.exe
+    - name: Upload artifacts(not Windows)
+      uses: actions/upload-artifact@v4
+      if: ! matrix.os == 'windows-latest'
+      with:
+        name: nighty-${{ github.sha }}-${{ matrix.target }}
+        path: ./target/release/tt
