--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -34,6 +34,8 @@ jobs:
       run: |
         rustup target add ${{ matrix.target }}
     - uses: Swatinem/rust-cache@v2
+      with:
+        prefix-key: "v0-rust-${{ matrix.target }}"
     - name: Build
       run: cargo build --verbose --release
     - name: Upload artifacts(Windows)
