--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,7 +17,6 @@ jobs:
         target:
         - x86_64-unknown-linux-gnu
         - x86_64-unknown-linux-musl
-        - x86_64-apple-darwin
         - x86_64-pc-windows-msvc
         include:
         - target: x86_64-unknown-linux-gnu
@@ -30,11 +29,13 @@ jobs:
     runs-on: ${{ matrix.os }}
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     - name: Setup Rust toolchain
       run: |
         rustup target add ${{ matrix.target }}
     - uses: Swatinem/rust-cache@v2
+      with:
+        prefix-key: "v0-rust-${{ matrix.target }}"
     - name: Build
       run: cargo build --verbose --release
     - name: Upload artifacts(Windows)
@@ -45,7 +46,7 @@ jobs:
         path: ./target/release/tt.exe
     - name: Upload artifacts(not Windows)
       uses: actions/upload-artifact@v4
-      if: ! matrix.os == 'windows-latest'
+      if: matrix.os != 'windows-latest'
       with:
         name: nighty-${{ github.sha }}-${{ matrix.target }}
         path: ./target/release/tt
