--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
 name = "tt"
-version = "0.1.0"
+version = "2.0.0"
 edition = "2021"
 
 [dependencies]
 chrono = "0.4.37"
+clap = { version = "4.5.4", features = ["derive"] }
 serde = "1.0.197"
 serde_derive = "1.0.197"
 confy = "0.6.1"
