--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ percent-encoding = "2.3.1"
 serde_json = "1.0.115"
 directories = "5.0.1"
 rand = "0.8.5"
+clap = { version = "4.5.4", features = ["derive"] }
