--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tt"
-version = "1.0.1"
+version = "2.0.0"
 edition = "2021"
 license = "MIT"
 
@@ -16,3 +16,4 @@ percent-encoding = "2.3.1"
 serde_json = "1.0.115"
 directories = "5.0.1"
 rand = "0.8.5"
+clap = { version = "4.5.4", features = ["derive"] }
