--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,4 @@ serde_json = "1.0.115"
 directories = "5.0.1"
 rand = "0.8.5"
 clap = { version = "4.5.4", features = ["derive"] }
+indicatif = "0.17.8"
