--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,5 @@ directories = "5.0.1"
 rand = "0.8.5"
 clap = { version = "4.5.4", features = ["derive"] }
 indicatif = "0.17.8"
+env_logger = "0.11.5"
+log = "0.4.22"
