--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ chrono = "0.4.37"
 serde = "1.0.197"
 serde_derive = "1.0.197"
 confy = "0.6.1"
-reqwest = { version = "0.12.3", features = ["json"] }
+reqwest = { version = "0.12.3", default-features = false, features = ["json", "rustls-tls"] }
 tokio = { version = "1", features = ["full"] }
 rusqlite = { version = "0.31.0", features = ["bundled"] }
 percent-encoding = "2.3.1"
@@ -20,3 +20,4 @@ clap = { version = "4.5.4", features = ["derive"] }
 indicatif = "0.17.8"
 env_logger = "0.11.5"
 log = "0.4.22"
+
