--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tt"
-version = "2.2.1"
+version = "2.3.0"
 edition = "2021"
 license = "MIT"
 
@@ -9,9 +9,12 @@ chrono = "0.4.37"
 serde = "1.0.197"
 serde_derive = "1.0.197"
 confy = "0.6.1"
-reqwest = { version = "0.12.3", default-features = false, features = ["json", "rustls-tls"] }
+reqwest = { version = "0.12.3", default-features = false, features = [
+  "json",
+  "rustls-tls",
+] }
 tokio = { version = "1", features = ["full"] }
-rusqlite = { version = "0.31.0", features = ["bundled"] }
+rusqlite = { version = "0.32.0", features = ["bundled"] }
 percent-encoding = "2.3.1"
 serde_json = "1.0.115"
 directories = "5.0.1"
@@ -20,4 +23,3 @@ clap = { version = "4.5.4", features = ["derive"] }
 indicatif = "0.17.8"
 env_logger = "0.11.5"
 log = "0.4.22"
-
