ci: remove a wrong suffix in unix systems(`.exe`)

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -64,5 +64,5 @@ jobs:
       with:
         name: nighty-${{ github.sha }}-${{ matrix.target }}
         path: |
-          ./target/release/tt.exe
+          ./target/release/tt
           ./LICENSE
